--- a/sass/partials/_mentor.scss
+++ b/sass/partials/_mentor.scss
@@ -9,16 +9,13 @@
 	font-family: $stack2;
 	font-size: em(13px);
 	font-weight: 600;
+	margin: 30px 0 0;
 	padding: 8px 15px 10px;
 	text-align: center;
 	width: 100%;
 
 	&:hover {
 		background-color: lighten($colorAccent,10%);
-	}
-
-	@include at-query($one) {
-		margin-top: 30px;
 	}
 
 	@include at-query($three) {
@@ -117,12 +114,18 @@
 
 	.line-one {
 		@include at-query($one) {
-			right: 225px;
+			right: 275px;
 			top: 30px;
+		}
+
+		@include at-query($two) {
+		    right: 250px;
+		    top: 25px;
 		}
 		
 		@include at-query($four) {
 			right: 4994%;
+			top: 35px;
 		}
 	}
 }
